--- a/index.html
+++ b/index.html
@@ -471,6 +471,7 @@
                         <a href="termsandprivacy/terms.html" class="tnc">Terms&Conditions</a>
                         
                         <a href="termsandprivacy/policy.html" class="tnc">Privacy Policy</a>
+                        <a> *No Refund No Cancellation</a>
                     </ul>
                 </div>
 
