socials link fix

--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
 
                         <div class="home__social-links">
                             
-                            <a href="https://www.instagram.com/" target="_blank" class="home__social-link">
+                            <a href="https://www.instagram.com/reactiv.in/" target="_blank" class="home__social-link">
                                 <i class="ri-instagram-line"></i>
                             </a>
-                            <a href="https://twitter.com/" target="_blank" class="home__social-link">
+                            <a href="https://twitter.com/bereactiv" target="_blank" class="home__social-link">
                                 <i class="ri-twitter-fill"></i>
                             </a>
 
-                            <a href="https://github.com/" target="_blank" class="home__social-link">
+                            <a href="https://github.com/re-activ" target="_blank" class="home__social-link">
                                 <i class="ri-github-fill"></i>
                             </a>
                         </div>
@@ -484,13 +484,13 @@
                         <li class="footer__information">namaste@reactiv.in</li>
                         
                         <div class="footer__social">
-                            <a href="https://www.github.com/" class="footer__social-link">
+                            <a href="https://github.com/re-activ" class="footer__social-link">
                                 <i class="ri-github-fill"></i>
                             </a>
-                            <a href="https://www.instagram.com/" class="footer__social-link">
+                            <a href="https://www.instagram.com/reactiv.in/" class="footer__social-link">
                                 <i class="ri-instagram-line"></i>
                             </a>
-                            <a href="https://twitter.com/" class="footer__social-link">
+                            <a href="https://twitter.com/bereactiv" class="footer__social-link">
                                 <i class="ri-twitter-fill"></i>
                             </a>
                         </div>
