--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
 
                 <div class="footer__content">
                     <h3 class="footer__title">
-                        #BeliefInTheLimitless
+                        #TheBeliefInTheLimitless
                     </h3>
 
                     <!---<div class="footer__cards">
