--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
                 be reactiv
             </span>
             <!-- clockwise counting of 3d elements -->
-            <img src="https://emojipedia-us.s3.amazonaws.com/source/microsoft-teams/337/trophy_1f3c6.png" alt="" class="button__1">
+            <img src="https://em-content.zobj.net/source/microsoft-teams/337/trophy_1f3c6.png" alt="" class="button__1">
 
-            <img src="https://emojipedia-us.s3.amazonaws.com/source/microsoft-teams/337/direct-hit_1f3af.png" alt="" class="button__2">
+            <img src="https://em-content.zobj.net/source/microsoft-teams/337/direct-hit_1f3af.png" alt="" class="button__2">
             
-            <img src="https://emojipedia-us.s3.amazonaws.com/source/microsoft-teams/337/fire_1f525.png" alt="" class="button__3">
+            <img src="https://em-content.zobj.net/source/microsoft-teams/337/fire_1f525.png" alt="" class="button__3">
 
-            <img src="https://emojipedia-us.s3.amazonaws.com/source/microsoft-teams/337/flexed-biceps_medium-skin-tone_1f4aa-1f3fd_1f3fd.png" alt="" class="button__4">
+            <img src="https://em-content.zobj.net/source/microsoft-teams/337/flexed-biceps_medium-skin-tone_1f4aa-1f3fd_1f3fd.png" alt="" class="button__4">
 
-            <img src="https://emojipedia-us.s3.amazonaws.com/source/microsoft-teams/337/running-shoe_1f45f.png" alt="" class="button__5">
+            <img src="https://em-content.zobj.net/source/microsoft-teams/337/running-shoe_1f45f.png" alt="" class="button__5">
         </a>
         <footer>
             <p>
